--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
         <meta charset="UTF-8" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
+
+        <meta
+            name="theme-color"
+            media="(prefers-color-scheme: light)"
+            content="#144fbd"
+        />
+        <meta
+            name="theme-color"
+            media="(prefers-color-scheme: dark)"
+            content="black"
+        />
+
         <meta name="description" content="Розрахунок відстані між векторами" />
 
         <title>Відстань між векторами</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-            rel="stylesheet"
-        />
-
         <link rel="icon" href="assets/calculator.svg" />
         <link rel="stylesheet" href="style.css" />
 
+        <link rel="manifest" href="manifest.json" />
+
+        <script src="metric-calculator.js" type="module"></script>
         <script src="script.js" type="module"></script>
     </head>
     <body>
